--- a/index.html
+++ b/index.html
@@ -24,12 +24,15 @@
     <form id="todo-form">
       <input type="text" placeholder="Write a To do and Press Enter" required/>
     </form>
-    <ul id="todo-list"></ul>
+    <ol id="todo-list"></ol>
     <div id="quote">
       <span></span>
       <span></span>
     </div>
-
+    <div id="weather">
+      <span></span>
+      <span></span>
+    </div>
     <script src="js/greeting.js"></script>
     <script src="js/clock.js"></script>
     <script src="js/quotes.js"></script>
